[tool.poetry]
name = "pyjwt-key-fetcher"
version = "0.2.0"
description = "Async library to fetch JWKs for JWT tokens"
authors = ["Digital Living International Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/pyjwt-key-fetcher"
packages = [
    {include="pyjwt_key_fetcher", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = {version = "^2.4.0", extras = ["crypto"]}
aiohttp = {version = "^3.8.1", extras = ["speedups"]}
cachetools = "^5.2.0"
aiocache = "^0.11.1"

[tool.poetry.dev-dependencies]
invoke = "^1.7.1"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
types-cachetools = "^5.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
