[tool.poetry]
name = "pyjwt-key-fetcher"
version = "0.6.0"
description = "Async library to fetch JWKs for JWT tokens"
authors = ["IOXIO"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/pyjwt-key-fetcher"
packages = [
    {include="pyjwt_key_fetcher", from="."}
]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = {version = "^2.7.0", extras = ["crypto"]}
aiohttp = {version = "^3.8.5", extras = ["speedups"]}
cachetools = "^5.3.1"
aiocache = "^0.12.1"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[tool.poetry.dev-dependencies]
invoke = "^2.0.0"
mypy = "^0.991"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
types-cachetools = "^5.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["pyjwt_key_fetcher/tests"]
strict = true
# enable once aiocache is fully typed
disallow_untyped_decorators = false
