[tool.poetry]
name = "pyjwt-key-fetcher"
version = "0.8.0"
description = "Async library to fetch JWKs for JWT tokens"
authors = ["IOXIO Ltd"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/ioxiocom/pyjwt-key-fetcher"
packages = [{ include = "pyjwt_key_fetcher", from = "." }]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = { version = "^2.8.0", extras = ["crypto"] }
aiohttp = {version = "^3.10.1", extras = ["speedups"]}
cachetools = "^5.3.2"
aiocache = "^0.12.2"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
types-cachetools = "^5.3.0.7"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ["pyjwt_key_fetcher/tests"]
strict = true
# enable once aiocache is fully typed
disallow_untyped_decorators = false
